core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
/* ... */
.collections div.additionalLinkList,
.collections ul.additionalLinkList,
.standaloneCollectionPanel div.additionalLinkList,
.standaloneCollectionPanel ul.additionalLinkList,
.entityCollectionsPanel div.additionalLinkList,
.entityCollectionsPanel ul.additionalLinkList {
    padding-bottom: 0px;
}









.col .additionalLinks,
.col .additionalLinksAndSelectorDropDown,
.entityPropertiesPanel .additionalLinks,
.entityCollectionsPanel .additionalLinksAndSelectorDropDown {
    margin-top: -6px;
}

.collection.panel-body {
    padding-top: 0px;
}

.collectionPanel .well {
    background-color: transparent;
    margin-bottom: 0px;
}



.nav > li > a {
    padding-left: 10px;
    padding-right: 10px;
}

/* fix for Firefox */
th > a > div > strong {
    float: left;
}

/* Labels on the left/top/none START */

.form-group {
    margin-bottom: 0;
}


div.label-left.form-group {
    width: 100%;
}

div.label-left label.control-label {
    width: 30%;
    float: left;
    padding-top: 2px;
    text-align: left;
}

.propertyEditForm .label-left label.control-label,
.actionParametersForm .label-left label.control-label {
    padding-left: 10px;
}

div.label-top label.control-label {
    /*padding-left: 10px;*/
    /*padding-bottom: 4px;*/
}

div.label-none label.control-label {
    display: none;
}

div.label-left .scalarValueWrapper {
    width: 70%;
    float: left;
}

div.label-left.actions-right .scalarValueWrapper {
    /*width: 62%;*/
}

.actions-right .additionalLinkListDropDown {
    float:right;
    /*width: 3%;*/
}


div.label-top .scalarValueWrapper,
div.label-none .scalarValueWrapper {
    /*width: 99.5%;*/
    display: block;
    /*padding-left: 8px;*/
    /*padding-right: 20px;*/
}

.modal-body div.label-top .scalarValueWrapper,
.modal-body div.label-none .scalarValueWrapper {
    padding-right: 14px;
}

div.label-left .scalarValueWrapper .form-control {
    width: 100%;
}

.file-preview-thumbnails {
    overflow: auto;
}

div.label-left .scalarValueWrapper .input-group {
    width: 100%;
}

div.label-left .scalarValueWrapper .input-group .input-group-addon {
    width: 1%;
}

div.label-left .choicesPlaceholder {
    display: inline-block;
    width: 100%;
    vertical-align: -webkit-baseline-middle;
    vertical-align: middle;
}

div.label-right .scalarValueWrapper {
    padding-left: 28.5%;
}

div.label-right .scalarValueWrapper .control-label{
    vertical-align: sub;
}
/* Labels on the left/top/none END */


.form-horizontal.actionParametersForm .form-group,
.form-horizontal.propertyEditForm .form-group {
    margin-left: -5px;
}

.form-horizontal.inputForm .form-group {
    margin-left: 0px;
    margin-right: -25px;
}

.form-horizontal.inputForm .form-group.label-none,
.form-horizontal.inputForm .form-group.label-top {
    margin-left: -10px;
}


.scalarValueWrapper textarea {
    resize: vertical;
}


.standaloneCollectionPanel .additionalLinkList {
    margin-left: 50px;
    margin-bottom: 0px;
    margin-top: -4px;
}
.standaloneCollectionPanel .selectorDropdown {
    margin-top: -4px;
}
.standaloneCollectionPanel div.iconAndTitle {
    min-height: 45px;
}

div.referencePanel.scalarNameAndValueComponentType {
    margin-bottom: 4px;
}

.referencePanel .entityLinkSelect2Panel .entityImage {
    width: 20px;
    height: 20px;
}

.referencePanel .form-group.label-left .scalarName.control-label {
    padding-right: 10px;
}

.referencePanel .form-group.label-left .scalarValueWrapper .entityLinkSelect2Panel{
    padding-top: 4px;
    padding-bottom: 3px;
}

.prototype {
    font-style: italic;
}

.propertyEditForm .buttons,
.actionParametersForm .buttons {
    padding-top: 20px;
}

.entityCollectionsPanel .panel-heading {
    padding-bottom: 10px;
}
.standaloneCollectionPanel .panel-heading {
    padding-bottom: 5px; /* different from entityCollectionsPanel because of display-inline ? of additionalLinks */
}

#body {
    padding-top: 20px;
}

.additionalLinks.pull-right {
    /*margin-right: 5px;*/
}

.additionalLinks.pull-right div {
    display: inline-block;
    /*margin-left: 5px;*/
}

.additionalLinks.pull-right div .additionalLinkListDropDown {
    margin-left: 10px;
    margin-right: 0px;
}


.scalarValueWrapper ul.additionalLinkList {
    padding-bottom: 5px;
}

.scalarValueWrapper ul.additionalLinkListInline li.additionalLinkItem {
    padding-bottom: 5px;
}

.scalarValueWrapper .help-block {
    margin-bottom: 5px;
}

.scalarValueWrapper .help-block ul {
    margin-bottom: 0px;
}

.scalarValueWrapper .help-block .alert {
    margin-bottom: 0px;
}

.navbar-header a.navbar-brand {
    margin-top: -2px;
}

.valueChoicesSelect2Panel .scalarValueWrapper .choicesPlaceholder {
    height: 33px;
}

.ui-draggable .modal-header {
    cursor: move;
}

.navigatorLabel .btn-link {
    margin-top: -2px;
    text-decoration: underline;
}

tr.headers th form input {
    margin-left: -8px;
}

#aboutLink {
    padding-right: 30px;
}

/*
.entityTabbed > .row > .leftColumn,
.entityTabbed > .row > .rightColumn {
    margin-top: 41px;
}
*/

.tab-content {
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
}

.nav-tabs {
    margin-bottom: 0;
}

.tabGroups > .row {
    padding-bottom: 10px;
}

.tabbable {
    padding-bottom: 10px;
}

.additionalLinkListDropDown ul.dropdown-menu li.additionalLinkItem {
    width: 100%;
}
.additionalLinkListDropDown ul.dropdown-menu {
    padding-top: 0%;
    padding-bottom: 0%;
}

/* cheap and nasty; ought really to suppress in Java code ... */
.propertyEditForm .additionalLinkList {
    display: none;
}

.choicesScalarValue {
    width: 95%;
    display: inline-block;
}

.associatedActionLinksRight .additionalLinkListDropDown {
    padding-right: 11px;
}

.editing .edit {
    padding-top: 2px;
    float: right;
    margin-bottom: 10px;
}

.multiLineStringPanel .scalarValueInput .editing .edit {
    margin-top: -30px;
}
/* ... */

